@@ -54,13 +54,9 @@ repository.url    = git://github.com/pjfl/p5-app-doh.git
 repository.web    = http://github.com/pjfl/p5-app-doh
 repository.type   = git
 
-[ReadmeAnyFromPod / ReadmeMarkdownInRoot]
-filename          = README.md
-location          = root
-type              = markdown
-
 [Run::BeforeBuild]
 run               = cp .build.PL Build.PL
+run               = cp var/root/docs/en/00_Getting_Started.md README.md
 
 [CopyFilesFromBuild]
 copy              = Build.PL
